big inspection cleanup